Adjust hero-small-image position and fix minor whitespace issues in CSS

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,6 +1,6 @@
 div[class="hero-wrapper"] {
   max-width: 100% !important;
-	background-color: yellow; 
+	background-color: yellow;
   /* margin-top: -70px !important; */
   z-index: -1;
 }
@@ -9,7 +9,7 @@ div[class="hero-wrapper"] {
 	position: relative;
 	width: 100%;
   max-width: 100%;
-	height: 70vh; 
+	height: 70vh;
 	min-height: 400px;
 	display: flex;
 	align-items: center;
@@ -67,8 +67,8 @@ div[class="hero-wrapper"] {
 
 .hero-small-image {
 	position: absolute;
-	bottom: 40px;
-	right: 10px;
+    bottom: 13px;
+    right: 4px;
 	width: 100px;
 	height: auto;
 	z-index: 3;
@@ -94,7 +94,7 @@ div[class="hero-wrapper"] {
 	}
 
 	.hero-small-image {
-		width: 70px; 
+		width: 70px;
 	}
 }
 
